fixed dark mode colors for pages

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,7 @@
   }
 
     .glassmorphic-container {
+        @apply dark:bg-dark-color;
         background-color: rgba(255, 255, 255, 0.5);
         backdrop-filter: blur(10px);
         border-radius: 15px;
